使用java.util.Base64类替代旧API